# lrc-file

./: README.md  pyproject.toml
.github/workflows/: ci-test.yml
lrc_file/: LrcDir.py  LrcFile.py  LrcFileCollection.py  LrcSet.py  LrcSets.py  __init__.py
lrc_file/scripts/: run_comparison.py
scripts/: compare_data_files.py
