[tool.poetry]
name = "lrc-file"
version = "0.1.0"
description = ""
authors = ["Jakub Rozek <jrozek@redhat.com>"]
packages = [
    {include = "lrc_file"},
]

[tool.poetry.scripts]
compare-data-files = "scripts.compare_data_files:main"

[tool.poetry.dependencies]
python = "^3.9"
lnst = {git = "https://github.com/LNST-project/lnst"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
